[WIP] promote subviews after tiling #28

--- a/lib/Dialect/TensorAlgebra/CMakeLists.txt
+++ b/lib/Dialect/TensorAlgebra/CMakeLists.txt
@@ -1,3 +1,29 @@
+# add_mlir_dialect_library(COMETTensorAlgebraDialect
+#   IR/TADialect.cpp
+
+#   Transforms/Transforms.cpp
+#   Transforms/LinalgTransforms.cpp
+#   Transforms/TCtoTTGT.cpp
+#   Transforms/Passes.cpp
+
+#   Transforms/CheckImplicitTensorDecls.cpp
+#   Transforms/TensorDeclLowering.cpp
+
+#   ADDITIONAL_HEADER_DIRS
+#   ${COMET_MAIN_INCLUDE_DIR}/comet/Dialect/TensorAlgebra
+
+#   DEPENDS
+#   COMETTensorAlgebraOpsIncGen
+#   COMETTensorAlgebraPassIncGen
+
+#   LINK_LIBS PUBLIC
+#   MLIRLinalgTransformOpsIncGen
+#   # # MLIR
+#   # ${BLAS_LIBRARIES} 
+# )
+
+# target_link_libraries(COMETTensorAlgebraDialect MLIRIR ${BLAS_LIBRARIES})
+
 add_llvm_library(COMETTensorAlgebraDialect
   IR/TADialect.cpp
 
@@ -12,7 +38,6 @@ add_llvm_library(COMETTensorAlgebraDialect
   ADDITIONAL_HEADER_DIRS
   ${COMET_MAIN_INCLUDE_DIR}/comet/Dialect/TensorAlgebra
   )
-
 
 add_dependencies(
   COMETTensorAlgebraDialect
