Memory analysis: memory access frequency pass added

--- a/frontends/comet_dsl/CMakeLists.txt
+++ b/frontends/comet_dsl/CMakeLists.txt
@@ -18,16 +18,19 @@ endif()
 
 get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
 get_property(conversion_libs GLOBAL PROPERTY MLIR_CONVERSION_LIBS)
+get_property(extension_libs GLOBAL PROPERTY MLIR_EXTENSION_LIBS)
 
 llvm_update_compile_flags(comet-opt)
 
 set(LIBS
+  MLIROptLib
   MLIRAnalysis
   MLIRIR
   MLIRParser
   MLIRPass
   MLIRTransforms
   COMETUtils
+  COMETAnalysis
   COMETTensorAlgebraDialect
   COMETIndexTreeDialect
   # COMETIndexTreeToSCF
@@ -48,4 +51,5 @@ target_link_libraries(comet-opt
     ${LIBS} 
     ${dialect_libs} 
     ${conversion_libs}
+    ${extension_libs}
     )
